<resources>
    <string name="app_name">AndroidBook</string>

    <string name="main_home">首页</string>
    <string name="main_sort">知识体系</string>
    <string name="main_my">我的</string>
    <string name="main_project">项目</string>

    <string name="mine_collect">我的收藏</string>
    <string name="mine_book_mark">我的书签</string>
    <string name="mine_setting">设置</string>

    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="register_password">设置密码</string>
    <string name="register_repassword">确认密码</string>

    <string name="register">注册</string>
    <string name="login">登录</string>

</resources>
