<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/top_bar_register"
        layout="@layout/layout_topbar2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <!--用户名-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_reg_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"/>

        </android.support.design.widget.TextInputLayout>

        <!--设置密码-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"/>

        </android.support.design.widget.TextInputLayout>

        <!--确认密码-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_reg_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_repassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>