<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uestc.lcy.androidbook.modules.MainActivity">

    <!--展示内容界面-->
    <LinearLayout
        android:id="@+id/ll_main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    </LinearLayout>

    <!--展示底部标签-->
    <LinearLayout
        android:id="@+id/ll_main_bottom"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@color/main_bottom_background"
        android:layout_alignParentBottom="true"
        >

        <RadioGroup
            android:id="@+id/rg_main_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_main_home"
                style="@style/tab_radio_button"
                android:drawableTop="@drawable/main_home_icon"
                android:text="@string/main_home"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/rb_main_sort"
                style="@style/tab_radio_button"
                android:drawableTop="@drawable/main_sort_icon"
                android:text="@string/main_sort"
                />

            <RadioButton
                android:id="@+id/rb_main_collect"
                style="@style/tab_radio_button"
                android:drawableTop="@drawable/main_collect_icon"
                android:text="@string/main_collect"
                />

            <RadioButton
                android:id="@+id/rb_main_my"
                style="@style/tab_radio_button"
                android:drawableTop="@drawable/main_my_icon"
                android:text="@string/main_my"
                />

        </RadioGroup>

    </LinearLayout>

</RelativeLayout>
